--- a/incidents.html
+++ b/incidents.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Incidencias - Aegis HUB</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
     <link rel="stylesheet" href="src/css/main.css" />
@@ -16,7 +16,6 @@
 </head>
 
 <body data-bs-theme="dark">
-    <!-- Navbar Mejorada -->
     <header class="navbar sticky-top">
         <div class="container-fluid px-4">
             <!-- Logo y Branding -->
@@ -30,8 +29,8 @@
                         stroke-linecap="round"></path>
                 </svg>
                 <div class="d-flex flex-column d-none d-md-flex">
-                    <h1 class="mb-0" data-i18n="INCIDENT_MANAGEMENT">Gestión de Incidencias</h1>
-                    <small class="text-muted" data-i18n="CYBERSECURITY_INCIDENTS">Herramienta de Investigación</small>
+                    <h1 class="mb-0" data-i18n="AEGIS_DASHBOARD">Aegis HUB</h1>
+                    <small class="text-muted" data-i18n="INCIDENT_MANAGEMENT_TITLE">Gestión de Incidencias</small>
                 </div>
             </div>
 
@@ -58,8 +57,10 @@
                     <span id="langText" class="fw-bold" style="font-size: 0.85rem;">ES</span>
                 </button>
 
-                <div class="vr mx-2 d-none d-md-block"></div>
+                <!-- Separador visual -->
+                <div class="vr mx-2 d-none d-lg-block"></div>
 
+                <!-- User Menu -->
                 <div class="dropdown">
                     <button class="btn btn-user-profile dropdown-toggle" type="button" id="userDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -82,6 +83,17 @@
                             <hr class="dropdown-divider-user">
                         </li>
                         <li>
+                            <a class="dropdown-item dropdown-item-user" href="index.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                                </svg>
+                                <span data-i18n="DASHBOARD">Dashboard</span>
+                            </a>
+                        </li>
+                        <li>
                             <a class="dropdown-item dropdown-item-user" href="admin.html">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -93,7 +105,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item dropdown-item-user" href="incidents.html">
+                            <a class="dropdown-item dropdown-item-user active" href="incidents.html">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round">
@@ -787,50 +799,20 @@
         window.viewIncident = (id) => IncidentManager.viewIncident(id);
     </script>
     <!-- Footer -->
-    <footer class="footer mt-auto py-4">
-        <div class="container-fluid px-3">
-            <div class="row align-items-center">
-                <div class="col-12 text-center d-flex flex-column align-items-center gap-3">
-                    <div class="footer-branding d-flex flex-column align-items-center">
-                        <small class="text-muted fw-bold" data-i18n="FOOTER_TEXT"></small>
-                        <small class="text-muted opacity-75" data-i18n="FOOTER_MADE_WITH"></small>
-                    </div>
-                    <div class="social-links">
-                        <a href="https://github.com/s3codecL" target="_blank" rel="noopener noreferrer" title="GitHub">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                                fill="currentColor">
-                                <path
-                                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-                            </svg>
-                        </a>
-                        <a href="https://discord.gg/NVYadvZDtQ" target="_blank" rel="noopener noreferrer"
-                            title="Discord">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                                fill="currentColor">
-                                <path
-                                    d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276c-.598.3428-1.2205.6447-1.8733.8923a.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1835 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1835 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z" />
-                            </svg>
-                        </a>
-                        <a href="https://www.youtube.com/@s3codecL" target="_blank" rel="noopener noreferrer"
-                            title="YouTube">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                                fill="currentColor">
-                                <path
-                                    d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z" />
-                            </svg>
-                        </a>
-                        <a href="https://www.linkedin.com/in/gandradev/" target="_blank" rel="noopener noreferrer"
-                            title="LinkedIn">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                                fill="currentColor">
-                                <path
-                                    d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" />
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <path
+        d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z" />
+    </svg>
+    </a>
+    <a href="https://www.linkedin.com/in/gandradev/" target="_blank" rel="noopener noreferrer" title="LinkedIn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+            <path
+                d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" />
+        </svg>
+    </a>
+    </div>
+    </div>
+    </div>
+    </div>
     </footer>
 
     <!-- Back to top button -->
