--- a/quickstart.html
+++ b/quickstart.html
@@ -17,6 +17,7 @@
     <!-- Navbar -->
     <header class="navbar sticky-top">
         <div class="container-fluid px-4">
+            <!-- Logo y Branding -->
             <div class="navbar-brand d-flex align-items-center">
                 <svg class="icon-brand me-2" width="32" height="32" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="1.5" role="img" aria-label="Aegis shield icon">
@@ -24,20 +25,21 @@
                     <path d="M12 2l7 4v5c0 5-3.5 9.5-7 11-3.5-1.5-7-6-7-11V6l7-4z" fill="none" stroke="currentColor"
                         stroke-linejoin="round" stroke-linecap="round"></path>
                     <path d="M9.5 10.5c.8.6 1.5.9 2.5.9s1.7-.3 2.5-.9" fill="none" stroke="currentColor"
-                        stroke-linecap="round">
-                    </path>
+                        stroke-linecap="round"></path>
                 </svg>
-                <div class="d-flex flex-column">
-                    <h1 class="mb-0">Aegis HUB</h1>
+                <div class="d-flex flex-column d-none d-md-flex">
+                    <h1 class="mb-0" data-i18n="AEGIS_DASHBOARD">Aegis HUB</h1>
                     <small class="text-muted" data-i18n="INVESTIGATION_TOOL">Herramienta de Investigación</small>
                 </div>
             </div>
-            <div class="d-flex gap-3">
+
+            <!-- Controles Derecha -->
+            <div class="navbar-controls d-flex flex-grow-1 justify-content-end align-items-center gap-2">
                 <a href="index.html" class="btn btn-ghost d-none d-md-flex" data-i18n="QS_ACCESS_DASHBOARD">Ir al
                     HUB</a>
 
                 <!-- Tema -->
-                <button class="btn btn-ghost p-2" id="theme-toggle" title="Cambiar tema">
+                <button class="btn btn-icon btn-ghost" id="theme-toggle" title="Cambiar tema">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-moon" width="20" height="20"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="display: none;">
                         <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"></path>
@@ -52,9 +54,56 @@
                 </button>
 
                 <!-- Idioma -->
-                <button class="btn btn-ghost p-2 fw-bold" id="language-toggle" title="Cambiar idioma">
+                <button class="btn btn-ghost" id="language-toggle" title="Cambiar idioma">
                     <span id="current-lang">ES</span>
                 </button>
+
+                <!-- Separador visual -->
+                <div class="vr mx-2 d-none d-lg-block"></div>
+
+                <!-- User Menu Placeholder (since no login on QS usually, but for consistency) -->
+                <div class="dropdown">
+                    <button class="btn btn-user-profile dropdown-toggle" type="button" id="userDropdown"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <div class="user-avatar">
+                            <span id="userInitial">U</span>
+                        </div>
+                        <span class="user-name d-none d-md-inline" data-i18n="USER_DEFAULT_NAME">Invitado</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-chevron-down ms-1" width="14"
+                            height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M6 9l6 6 6-6"></path>
+                        </svg>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 dropdown-menu-user"
+                        aria-labelledby="userDropdown">
+                        <li>
+                            <a class="dropdown-item dropdown-item-user active" href="quickstart.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                                    <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+                                </svg>
+                                <span data-i18n="QS_QUICK_START">Inicio Rápido</span>
+                            </a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider-user">
+                        </li>
+                        <li>
+                            <a class="dropdown-item dropdown-item-user" href="login.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"></path>
+                                    <polyline points="10 17 15 12 10 7"></polyline>
+                                    <line x1="15" y1="12" x2="3" y2="12"></line>
+                                </svg>
+                                <span data-i18n="LOGIN">Iniciar Sesión</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
