--- a/admin.html
+++ b/admin.html
@@ -139,92 +139,50 @@
     <!-- Main Content -->
     <div class="container-xxl py-4">
         <!-- Stats Cards -->
-        <div class="row g-3 mb-4">
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="d-flex align-items-center">
-                            <div class="subheader text-uppercase fw-semibold"
-                                style="font-size: 0.75rem; letter-spacing: 0.5px;" data-i18n="TOTAL_USERS">Total
-                                Usuarios</div>
-                        </div>
-                        <div class="h1 mb-0 fw-bold text-primary" style="font-size: 2.5rem;" id="stat-total-users">0
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="d-flex align-items-center">
-                            <div class="subheader text-uppercase fw-semibold"
-                                style="font-size: 0.75rem; letter-spacing: 0.5px;" data-i18n="ADMINISTRATORS">
-                                Administradores</div>
-                        </div>
-                        <div class="h1 mb-0 fw-bold text-primary" style="font-size: 2.5rem;" id="stat-admins">0</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="d-flex align-items-center">
-                            <div class="subheader text-uppercase fw-semibold"
-                                style="font-size: 0.75rem; letter-spacing: 0.5px;" data-i18n="ACTIVE_USERS">Usuarios
-                                Activos</div>
-                        </div>
-                        <div class="h1 mb-0 fw-bold text-primary" style="font-size: 2.5rem;" id="stat-active-users">0
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="d-flex align-items-center">
-                            <div class="subheader text-uppercase fw-semibold"
-                                style="font-size: 0.75rem; letter-spacing: 0.5px;" data-i18n="NEW_USERS_7DAYS">Nuevos (7
-                                días)</div>
-                        </div>
-                        <div class="h1 mb-0 fw-bold text-primary" style="font-size: 2.5rem;" id="stat-new-users">0</div>
-                    </div>
-                </div>
-            </div>
+        <div class="d-flex align-items-center">
+            <div class="subheader text-uppercase fw-semibold" style="font-size: 0.75rem; letter-spacing: 0.5px;"
+                data-i18n="NEW_USERS_7DAYS">Nuevos (7
+                días)</div>
         </div>
+        <div class="h1 mb-0 fw-bold text-primary" style="font-size: 2.5rem;" id="stat-new-users">0</div>
+    </div>
+    </div>
+    </div>
+    </div>
 
-        <!-- Users Table -->
-        <div class="card">
-            <div class="card-header d-flex justify-content-between align-items-center">
-                <h3 class="card-title mb-0 text-primary" data-i18n="USER_MANAGEMENT_TABLE">Gestión de Usuarios</h3>
-                <button class="btn btn-primary" onclick="showAddUserModal()">
-                    <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                        stroke-width="2">
-                        <line x1="12" y1="5" x2="12" y2="19"></line>
-                        <line x1="5" y1="12" x2="19" y2="12"></line>
-                    </svg>
-                    <span data-i18n="ADD_USER">Añadir Usuario</span>
-                </button>
-            </div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-hover" style="font-size: 0.9375rem;">
-                        <thead>
-                            <tr>
-                                <th class="fw-semibold" data-i18n="USER">Usuario</th>
-                                <th class="fw-semibold" data-i18n="EMAIL">Email</th>
-                                <th class="fw-semibold" data-i18n="ROLE">Rol</th>
-                                <th class="fw-semibold" data-i18n="CREATED">Creado</th>
-                                <th class="fw-semibold" data-i18n="LAST_ACCESS">Último Acceso</th>
-                                <th class="text-end fw-semibold" data-i18n="ACTIONS">Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody id="users-table-body">
-                            <!-- Se llena dinámicamente -->
-                        </tbody>
-                    </table>
-                </div>
+    <!-- Users Table -->
+    <div class="card">
+        <div class="card-header d-flex justify-content-between align-items-center">
+            <h3 class="card-title mb-0 text-primary" data-i18n="USER_MANAGEMENT_TABLE">Gestión de Usuarios</h3>
+            <button class="btn btn-primary" onclick="showAddUserModal()">
+                <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="2">
+                    <line x1="12" y1="5" x2="12" y2="19"></line>
+                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                </svg>
+                <span data-i18n="ADD_USER">Añadir Usuario</span>
+            </button>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-hover" style="font-size: 0.9375rem;">
+                    <thead>
+                        <tr>
+                            <th class="fw-semibold" data-i18n="USER">Usuario</th>
+                            <th class="fw-semibold" data-i18n="EMAIL">Email</th>
+                            <th class="fw-semibold" data-i18n="ROLE">Rol</th>
+                            <th class="fw-semibold" data-i18n="CREATED">Creado</th>
+                            <th class="fw-semibold" data-i18n="LAST_ACCESS">Último Acceso</th>
+                            <th class="text-end fw-semibold" data-i18n="ACTIONS">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody id="users-table-body">
+                        <!-- Se llena dinámicamente -->
+                    </tbody>
+                </table>
             </div>
         </div>
+    </div>
     </div>
 
     <!-- Add/Edit User Modal -->
